--- a/index.css
+++ b/index.css
@@ -55,6 +55,10 @@ nav > h3 > ul > li:hover{
 	background-color: #0C4870;
 }
 
+div > p{
+	align-content: justify;
+}
+
 nav > ul > h3 > li > a > p{
 	display: flex;
 	align-items: center;
@@ -62,6 +66,10 @@ nav > ul > h3 > li > a > p{
 	height: 100%;
 	padding: 0 10px;
 	text-align: center;
+}
+
+div > h2 > p > img{
+	margin: 4 px;
 }
 
 .logos{
