--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ nav > ul > h3 > li{
 	height: 100%;
 }
 
-nav > ul > h3 > li > a, nav > ul > li > a:hover{
+nav > ul > h3 > li > a> nav > ul > li > a:hover{
 	text-decoration: none;
 	color:#F1F1F5;
 	font-size: 1.2em;
@@ -55,6 +55,10 @@ nav > h3 > ul > li:hover{
 	background-color: #0C4870;
 }
 
+div > p{
+	align-content: justify;
+}
+
 nav > ul > h3 > li > a > p{
 	display: flex;
 	align-items: center;
@@ -62,6 +66,10 @@ nav > ul > h3 > li > a > p{
 	height: 100%;
 	padding: 0 10px;
 	text-align: center;
+}
+
+div > h2 > p > img{
+	margin: 4 px;
 }
 
 .logos{
@@ -89,10 +97,17 @@ nav > ul > h3 > li > a > p{
 
 .contenedor{
 
-	width: 100%;
+	border-image-repeat: 
 
 }
 
+.add img, .word img, .excel, .mp4 img, .pdf img, .powerpoint img{
+	display: inline-block;
+     font-size: inherit;
+}
+.user{
+	align-items: right;
+}
 .content{
 	
 	width: 50%;
@@ -100,7 +115,33 @@ nav > ul > h3 > li > a > p{
 
 }
 
-.inicio, .compartir, .contacto, .registro{
+.solicitud{
+	text-align: left;
+	align-items: left;
+}
+
+.lead{
+	
+	text-align: justify;
+	align-items: right;
+}
+.parrafo{
+	text-align: justify;
+}
+
+
+
+.pie{
+	font-size: 10px;
+
+}
+
+.fecha{
+	font-family: "Times New Roman", Times, serif;
+	font-size: 15px;
+}
+
+.inicio, .compartir, .contacto, .solicitud, .registro{
 
 	width: 100%;	
 	text-align: center;
@@ -169,4 +210,35 @@ footer{
 	background-color: #000;
 	border-color: #E04727;
 	padding: 2rem 1rem
+}
+
+.texto{
+	text-align: justify;
+    	text-justify: inter-word;
+}
+
+.lead{
+	padding: 2px;
+}
+
+.w3-red{
+	background-color: #D5D8DC;
+	font-family:'Montserrat', sans-serif;
+	color: #fff;
+	padding: 2rem 1rem
+}
+
+.fecha{
+	font-family:'Montserrat', sans-serif;
+	
+	box-sizing: border-box;
+}
+
+.p-3{
+	background-color: #D5D8DC;
+}
+.col-xs-2{
+	font-family:'Montserrat', sans-serif;
+	font-size: 2rem;
+	border-color: #E04727;
 }
